@@ -3,6 +3,8 @@
     * Updated Korean translation from TaeYoung Oh.
 
     * Added UI preference to enforce character alignment.
+    
+    * Removed "Save" and "Cancel" buttons from Bookmarks window.
 
 2003-06-16	ujwal
 
